@@ -28,7 +28,14 @@ SkeletonBrief::SkeletonBrief():
 
 QString SkeletonBrief::valueText() const
 {
+    /* Here we can return a custom value line if needed.
+     * In case we do not do that, the static one from the .desktop file will be
+     * used. */
+#if 0
     return "value text " + QString::number(m_Value);
+#else
+    return QString();
+#endif
 }
 
 QString SkeletonBrief::titleText() const
